# ticktick-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
src/ticktick_cli/: api.py  cache.py  cli.py  config.py  dates.py  reminders.py
src/ticktick_openapi_cli/: auth.py  cli.py
tests/: test_cache.py  test_cli_json.py  test_dates.py  test_reminders.py
